--- a/style.css
+++ b/style.css
@@ -121,3 +121,90 @@ input[type="number"]:focus {
   margin-top: 20px;
   color: #999;
 }
+
+/* Animaciones */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
+}
+
+/* Imágenes */
+.logo {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
+/* Estilos de estadísticas */
+.stats-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.stats-container > div {
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 30%;
+  text-align: center;
+  animation: slideInLeft 1s;
+  animation-fill-mode: forwards;
+  animation-delay: 0.2s;
+}
+
+.stats-container > div:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.stats-container > div:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.stats-container > div > h3 {
+  margin: 0;
+  margin-bottom: 10px;
+  font-size: 32px;
+  color: #4056a1;
+  animation: pulse 1s infinite;
+}
+
+.stats-container > div > p {
+  margin: 0;
+  font-size: 18px;
+  color: #707070;
+}
