--- a/style.css
+++ b/style.css
@@ -1,39 +1,107 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
+  background-color: #f8f8f8;
   font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
+  margin-bottom: 20px;
+  font-size: 36px;
+  text-align: center;
+}
+
+h2 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+.balance-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.balance {
+  flex-basis: 30%;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+}
+
+.balance h3 {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.balance p {
+  font-size: 24px;
+  font-weight: bold;
   text-align: center;
 }
 
 form {
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-bottom: 40px;
+}
+
+.form-group {
+  margin-bottom: 20px;
 }
 
 label {
-  margin-right: 10px;
+  display: block;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+input[type="number"] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 button {
-  margin-top: 10px;
-}
-
-#treasuryBalance,
-#userBalance {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #009688;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
   font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
 button:hover {
-  cursor: pointer;
-  background-color: #4CAF50;
-  color: white;
+  background-color: #00796b;
 }
 
-button:disabled {
-  cursor: default;
-  background-color: #cccccc;
-  color: #666666;
+#claimRewardButton {
+  background-color: #00796b;
+  margin-top: auto;
+}
+
+#claimRewardButton:hover {
+  background-color: #005b4f;
 }
