--- a/style.css
+++ b/style.css
@@ -19,71 +19,63 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-h1 {
-  margin-bottom: 20px;
+.header {
+  background-color: #009688;
+  color: #fff;
+  padding: 20px;
+}
+
+.header__title {
+  margin: 0;
   font-size: 36px;
-  text-align: center;
 }
 
-h2 {
-  margin-top: 20px;
-  margin-bottom: 10px;
-  font-size: 24px;
+.main {
+  margin-top: 40px;
 }
 
-.balance-container {
+.row {
   display: flex;
   justify-content: space-between;
   margin-bottom: 40px;
 }
 
-.balance {
-  flex-basis: 30%;
-  padding: 10px;
-  background-color: #f0f0f0;
+.col {
+  flex-basis: 48%;
+}
+
+.balance-card {
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.balance h3 {
-  margin-bottom: 10px;
-  font-size: 18px;
+.balance-card__header {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
-.balance p {
+.balance-card__title {
+  margin: 0;
   font-size: 24px;
+}
+
+.balance-card__body {
+  padding: 20px;
+}
+
+.balance-card__balance {
+  margin: 0;
+  font-size: 36px;
   font-weight: bold;
   text-align: center;
 }
 
-form {
-  margin-bottom: 40px;
-}
-
-.form-group {
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 18px;
-}
-
-input[type="number"] {
+.button {
   display: block;
   width: 100%;
   padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: #009688;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -93,15 +85,67 @@ button {
   transition: background-color 0.2s ease-in-out;
 }
 
-button:hover {
+.button--primary {
+  background-color: #009688;
+}
+
+.button--primary:hover {
   background-color: #00796b;
 }
 
-#claimRewardButton {
-  background-color: #00796b;
-  margin-top: auto;
+.form {
+  margin-bottom: 40px;
 }
 
-#claimRewardButton:hover {
-  background-color: #005b4f;
+.form__title {
+  margin-bottom: 20px;
+  font-size: 24px;
 }
+
+.form__group {
+  margin-bottom: 20px;
+}
+
+.form__label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.form__control-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.form__control {
+  flex-basis: 70%;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 1.5;
+  border: none;
+  outline: none;
+}
+
+.form__currency {
+  flex-basis: 28%;
+  padding: 10px;
+  background-color: #f0f0f0;
+  border-radius: 0 5px 5px 0;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.form__button {
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.form__error-message {
+  margin-top: 5px;
+  font-size: 14px;
+  color: #c00;
