--- a/style.css
+++ b/style.css
@@ -1,40 +1,97 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
+  background-color: #f1f1f1;
 }
 
-h1 {
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.title {
   text-align: center;
+  margin-bottom: 50px;
 }
 
-h2 {
-  margin-top: 30px;
-}
-
-form {
-  display: flex;
-  align-items: center;
+.box {
+  background-color: #fff;
+  padding: 20px;
   margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-input[type="number"] {
-  padding: 5px;
+.subtitle {
+  margin-top: 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-control {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.form-control label {
   margin-right: 10px;
 }
 
-button {
+.form-control input {
+  flex: 1;
+  padding: 5px;
+}
+
+.button {
   padding: 5px 10px;
   background-color: #4CAF50;
-  color: white;
+  color: #fff;
   border: none;
-  border-radius: 3px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   background-color: #3e8e41;
 }
 
-#message {
-  margin-top: 20px;
-  text-align: center;
+.form-error {
+  color: #ff0000;
+  margin-bottom: 10px;
+}
+
+.stats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.stats-box {
+  width: calc(50% - 10px);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.stats-box h2 {
+  margin-top: 0;
+}
+
+.stats-box p {
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 600px) {
+  .stats-box {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
