--- a/style.css
+++ b/style.css
@@ -5,29 +5,42 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
+  background-image: url("https://picsum.photos/1920/1080");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 30px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .title {
   text-align: center;
   margin-bottom: 50px;
+  color: #444;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .box {
-  background-color: #fff;
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .subtitle {
   margin-top: 0;
+  margin-bottom: 10px;
+  color: #444;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form {
@@ -42,6 +55,8 @@ body {
 
 .form-control label {
   margin-right: 10px;
+  color: #444;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form-control input {
@@ -56,6 +71,7 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .button:hover {
@@ -71,6 +87,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-top: 30px;
 }
 
 .stats-box {
@@ -83,6 +100,9 @@ body {
 
 .stats-box h2 {
   margin-top: 0;
+  margin-bottom: 10px;
+  color: #444;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .stats-box p {
