--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
-  background-image: url("https://picsum.photos/1920/1080");
+  background-image: url("https://wallpapercave.com/wp/wp3624604.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
