--- a/style.css
+++ b/style.css
@@ -5,18 +5,13 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
-  background-image: url("https://wallpapercave.com/wp/wp3624604.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow: hidden;
 }
 
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 30px;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -25,7 +20,6 @@ body {
   text-align: center;
   margin-bottom: 50px;
   color: #444;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .box {
@@ -40,7 +34,6 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
   color: #444;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form {
@@ -56,7 +49,6 @@ body {
 .form-control label {
   margin-right: 10px;
   color: #444;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .form-control input {
@@ -84,14 +76,13 @@ body {
 }
 
 .stats {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
   margin-top: 30px;
 }
 
 .stats-box {
-  width: calc(50% - 10px);
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
@@ -102,7 +93,6 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
   color: #444;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .stats-box p {
@@ -110,8 +100,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .stats-box {
-    width: 100%;
-    margin-bottom: 20px;
+  .stats {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
