--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
 }
 
 .container {
@@ -19,21 +19,25 @@ body {
 .title {
   text-align: center;
   margin-bottom: 50px;
-  color: #444;
+  color: #333;
+  font-size: 36px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .box {
-  padding: 20px;
-  margin-bottom: 20px;
+  padding: 30px;
+  margin-bottom: 30px;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: #f5f5f5;
 }
 
 .subtitle {
   margin-top: 0;
   margin-bottom: 10px;
-  color: #444;
+  color: #333;
+  font-size: 24px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .form {
@@ -43,27 +47,35 @@ body {
 
 .form-control {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .form-control label {
   margin-right: 10px;
-  color: #444;
+  color: #333;
+  font-size: 18px;
+  line-height: 28px;
 }
 
 .form-control input {
   flex: 1;
-  padding: 5px;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .button {
-  padding: 5px 10px;
+  padding: 10px 20px;
   background-color: #4CAF50;
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-size: 18px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .button:hover {
@@ -74,29 +86,35 @@ body {
   color: #ff0000;
   margin-bottom: 10px;
 }
-
 .stats {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 20px;
-  margin-top: 30px;
+  grid-gap: 30px;
+  margin-top: 50px;
 }
 
 .stats-box {
-  background-color: #fff;
-  padding: 20px;
+  background-color: #f5f5f5;
+  padding: 30px;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .stats-box h2 {
   margin-top: 0;
-  margin-bottom: 10px;
-  color: #444;
+  margin-bottom: 20px;
+  color: #333;
+  font-size: 24px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 .stats-box p {
-  margin: 10px 0;
+  margin: 20px 0;
+  font-size: 24px;
+  line-height: 28px;
+  color: #333;
+  font-weight: 600;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (max-width: 600px) {
