--- a/style.css
+++ b/style.css
@@ -183,4 +183,45 @@ h2 {
 
 button[type="submit"],
 button {
- 
+   background-color: #1abc9c;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #16a085;
+}
+
+form {
+  margin-bottom: 40px;
+}
+
+label {
+  font-size: 20px;
+}
+
+input[type="number"] {
+  width: 100px;
+  font-size: 20px;
+}
+
+ul li {
+  font-size: 20px;
+}
+
+span {
+  font-size: 20px;
+}
+
+footer {
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.social a {
+  color: #777;
+}
+
+.social a:hover {
+  color: #1abc9c;
+}
